# esn_detector_motion

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_ens.ipynb
notebooks/: preprocessing_image.ipynb  test_esn_force.ipynb  test_esn_old.ipynb  test_esn_ridge.ipynb  test_motion_detector.ipynb
src/: detector.py  metrics.py
src/datasets/: __init__.py  mackey_glass.py  utils.py
src/model/: __init__.py  esn_force.py  esn_old.py  esn_ridge.py
src/model/modules/: __init__.py  force.py  reservoir.py  ridge.py
src/model/utils/: __init__.py  functions.py  matrix.py  metrics.py
src/utils/: __init__.py  metrics.py  plot.py
src/utils/buffer/: __init__.py  fixed_buffer.py
tests/: test_metrics.py
tests/datasets/: test_makey_glass.py  test_utils.py
tests/model/modules/: test_force.py  test_reservoir.py  test_ridge.py
