[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_project"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    {name="Danya Alekseev", email="lashywork@gmail.com"}
]
dependencies = [
    "numpy==2.0.0",
    "torch==2.3.1",
    "matplotlib==3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
include = ["src", "tests"]
ignore = []
select = []
line-length = 120